Change production db_url

--- a/config/database.yml
+++ b/config/database.yml
@@ -80,5 +80,4 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  <<: *default
-  database: pinterest_production
+  DATABASE_URL="postgresql://postgres:PJaztUijkwsBxTVhcvZYnxEsJEZrWiot@roundhouse.proxy.rlwy.net:15262/railway"
