Change production db info

--- a/config/database.yml
+++ b/config/database.yml
@@ -80,5 +80,12 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  url: <%= ENV['DATABASE_URL'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: railway
+  username: postgres
+  password: <%= ENV['PGPASSWORD'] %>
+  host: roundhouse.proxy.rlwy.net
+  port: 15262
 
